--- a/quest/core/CMakeLists.txt
+++ b/quest/core/CMakeLists.txt
@@ -17,7 +17,9 @@ find_package(pybind11 CONFIG REQUIRED)
 message(STATUS "Found pybind11: ${pybind11_CONFIG}")
 
 pybind11_add_module(core core.cc)
+pybind11_add_module(mc_demo MODULE mc_demo.cpp)
 set(CMAKE_CXX_FLAGS "-fopenmp")
 
 find_package(TargetLAPACK REQUIRED)
 target_link_libraries(core PRIVATE tgt::lapack)
+
