--- a/quest/default_params.yml
+++ b/quest/default_params.yml
@@ -4,8 +4,8 @@ qm:
   density_fitting: False
   diis: True
   max_diis: 6
-  d_conv: 1.0e-04
-  e_conv: 1.0e-06
+  D_conv: 1.0e-04
+  E_conv: 1.0e-06
   numpy_memory: 1.0e+09
 mm:
   num_particles: 800
